@@ -67,11 +67,6 @@ our $templates = "templates";
 
 # Temporary files stored at"
 our $tempdir = ( $ENV{TEMP} || '/tmp' );
-$ENV{HOME} = $tempdir;
-
-our $cache_template_dir = "$tempdir/lsmb_templates";
-# Backup path
-our $backuppath = $tempdir;
 
 # member file
 our $memberfile = "users/members";
@@ -143,13 +138,22 @@ for my $var (qw(sendmail smtphost smtptimeout smtpuser
     ${$var} = $config{mail}{$var} if $config{mail}{$var};
 }
 
+my $modules_loglevel_overrides='';
+my %tmp=%{$config{log4perl_config_modules_loglevel}} if $config{log4perl_config_modules_loglevel};
+for(sort keys %tmp)
+{
+ #print STDERR "Sysconfig key=$_ value=$tmp{$_}\n";
+ $modules_loglevel_overrides=$modules_loglevel_overrides.'log4perl.logger.'.$_.'='.$tmp{$_}."\n";
+}
+#print STDERR localtime()." Sysconfig \$modules_loglevel_overrides=$modules_loglevel_overrides\n";
 # Log4perl configuration
 our $log4perl_config = qq(
     log4perl.rootlogger = $log_level, Basic, Debug
-    #some examples of loglevel setting for modules
-    log4perl.logger.LedgerSMB.DBObject = INFO
-    log4perl.logger.LedgerSMB.Handler = DEBUG
-
+    )
+    .
+    $modules_loglevel_overrides
+    .
+    qq(
     log4perl.appender.Screen = Log::Log4perl::Appender::Screen
     log4perl.appender.Screen.layout = SimpleLayout
     # Filter for debug level
@@ -173,8 +177,16 @@ our $log4perl_config = qq(
     log4perl.appender.Basic.layout = PatternLayout
     log4perl.appender.Basic.layout.ConversionPattern = %d - %p %m%n
     log4perl.appender.Basic.Filter = MatchRest
-
 );
+#some examples of loglevel setting for modules
+#FATAL, ERROR, WARN, INFO, DEBUG, TRACE
+#log4perl.logger.LedgerSMB = DEBUG
+#log4perl.logger.LedgerSMB.DBObject = INFO
+#log4perl.logger.LedgerSMB.DBObject.Employee = FATAL
+#log4perl.logger.LedgerSMB.Handler = ERROR
+#log4perl.logger.LedgerSMB.User = WARN
+#log4perl.logger.LedgerSMB.ScriptLib.Company=TRACE
+#print STDERR localtime()." Sysconfig log4perl_config=$log4perl_config\n";
 
 $ENV{PGHOST} = $config{database}{host};
 $ENV{PGPORT} = $config{database}{port};
@@ -182,5 +194,11 @@ our $default_db = $config{database}{default_db};
 our $db_namespace = $config{database}{db_namespace} || 'public';
 $ENV{PGSSLMODE} = $config{database}{sslmode} if $config{database}{sslmode};
 $ENV{PG_CONTRIB_DIR} = $config{database}{contrib_dir};
+
+$ENV{HOME} = $tempdir;
+
+our $cache_template_dir = "$tempdir/lsmb_templates";
+# Backup path
+our $backuppath = $tempdir;
 
 1;
