@@ -1,6 +1,6 @@
 <?lsmb INCLUDE "ui-header.html" 
        stylesheet = stylesheet
-       include_stylesheet = ['history.css'] ?>
+       # include_stylesheet = ['UI/Contact/history.css'] ?>
 <?lsmb PROCESS 'elements.html' ?>
  
 <body> 
