@@ -13,6 +13,15 @@ Changelog for LedgerSMB 1.3.7
 * Added foreign key of entity_credit_account.language_code (Herman V)
 * Fixed pricelist button (customer/vendor) producing error (Chris T)
 * Fixed date error when processing recurring transactions (Chris T)
+* Exposed LedgerSMB::Sysconfig::tempdir to configuration file (Herman V)
+* Fixed invoice tempfiles never being cleaned up (Herman V)
+* Fixed LedgerSMB.pm warnings during tests (Herman V)
+* Allow log-level to be set from config file (Herman V)
+* Corrected 'Invalid Year-end filter' when exporting trial balance (Chris T)
+* Correcting errors attaching and retriving URL attachments (Chris T)
+* Correcting history.css not found (Chris T)
+* Correcting parse errors in pos_template.txt (Chris T)
+* Corrected Action not defined error on asset import (Chris T)
 
 Changelog for LedgerSMB 1.3.6
 * Including xelatex templates under directory templates/xedemo (Chris T)
